calico-policies/private-network-isolation/calico-v3/eu-de/allow-private-services-pods.yaml
# This policy allows outgoing network traffic from pods to other
# IBM Cloud services that support private service endpoints.
# The example nets in this policy are for IBM Cloud Container Registry.

apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-private-services-pods
spec:
  egress:
  - action: Allow
    destination:
      nets:
      # IBM Cloud Container Registry: Global registry
      - 166.9.20.4/32
      - 166.9.22.3/32
      - 166.9.24.2/32
      # IBM Cloud Container Registry: EU Central nets for your own registry
      - 166.9.28.12
      - 166.9.30.9
      - 166.9.32.5
      ports:
      - 443
      - 4443
    protocol: TCP
    source: {}
  order: 1900
  selector: projectcalico.org/orchestrator == 'k8s'
  types:
  - Egress
